# spectre

./: Cargo.toml  README.md  profiles.toml
.github/workflows/: ci.yml
infrastructure/: main.tf
src/: engine.rs  main.rs  tui.rs
