[package]
name = "spectre"
version = "0.2.0" 
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }

headless_chrome = { version = "1.0", features = ["fetch"] }
ratatui = "0.26"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
toml = "0.8"
crossterm = "0.27"
rand = "0.8"
rquest = "5"
rquest-util = "2.2.1"
lazy_static = "1.5.0"
